syntax = "proto3";

package api.protobuf;
option go_package = "github.com/b2network/b2-indexer/api/protobuf/vo";

message HelloRequest {
}

message HelloResponse  {
  int64 code = 1; // 0: 正常返回值, 其他的值为错误码
  string message = 2; // 响应消息
  Data data = 3; // 返回结构体
  message Data {
    string info = 1; // 信息
  }
};